WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37812
Assertion failure when appcache/fail-on-update.html is run twice in a row
https://bugs.webkit.org/show_bug.cgi?id=37812
Summary
Assertion failure when appcache/fail-on-update.html is run twice in a row
Alexey Proskuryakov
Reported
2010-04-19 12:15:52 PDT
run-webkit-tests --repeat 2 http/tests/appcache/fail-on-update.html This often fails an assertion in associateDocumentLoaderWithCache(), as an obsolete cache gets associated with a document. This seems to be a mistake in the spec, e-mailed <
http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/025975.html
>.
Attachments
work in progress
(8.43 KB, patch)
2010-08-17 03:05 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(8.46 KB, patch)
2010-10-04 16:02 PDT
,
Alexey Proskuryakov
abarth
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-08-12 13:37:42 PDT
Spec fixed in <
http://html5.org/tools/web-apps-tracker?from=5285&to=5286
>.
Alexey Proskuryakov
Comment 2
2010-08-17 03:05:21 PDT
Created
attachment 64568
[details]
work in progress It's easy to apply the spec changes, but my test uncovered several other bugs. This patch fixes those, but the test still crashes randomly, possibly due to the same issue as
bug 43506
.
Alexey Proskuryakov
Comment 3
2010-10-04 16:02:15 PDT
Created
attachment 69709
[details]
proposed fix
Adam Barth
Comment 4
2010-10-04 16:06:22 PDT
Comment on
attachment 69709
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=69709&action=review
Hum... This change is a bit mysterious to me, but ap tells me that no one really understands appcache and he's looking for more of a sanity check.
> LayoutTests/http/tests/appcache/resources/fail-on-update-2.php:4 > +$tmpFile = sys_get_temp_dir() . "/" . "fail_on_update_state";
Does sys_get_temp_dir give you something specific to webkit?
Alexey Proskuryakov
Comment 5
2010-10-04 16:13:05 PDT
Committed <
http://trac.webkit.org/changeset/69048
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug